fix: footer alignment

--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -6,6 +6,7 @@
 
 .footer {
     display: flex;
+    align-items: center;
     justify-content: space-between;
     position: absolute;
     bottom: 0;
